# spyder-vim

./: .ciocheck  .gitignore  CHANGELOG.md  CHANGELOG.temp  CONTRIBUTING.md  LICENSE.txt  MANIFEST.in  README.md  README.rst  RELEASE.md  circle.yml  pyproject.toml  runtests.py  setup.py
.github/workflows/: linux-tests.yml  macos-tests.yml  windows-tests.yml
requirements/: conda.txt  test.txt  tests.txt
spyder_vim/: __init__.py  p_vim.py  vim.py  vim_widget.py
spyder_vim/spyder/: __init__.py  api.py  confpage.py  container.py  plugin.py  widgets.py
spyder_vim/test/: test_vim.py
spyder_vim/tests/: test_vim.py
spyderplugins/p_vim/: p_vim.py
tests/spyder-vim/: __init__.py  foo.txt  test_widgets.py
